--- a/index.html
+++ b/index.html
@@ -11,11 +11,12 @@
       }
     </style>
     <script src="p5.js"></script>
-    <!-- <script src="https://unpkg.com/ml5@latest/dist/ml5.min.js"></script> -->
-    <script src="sketch.js"></script>
+    <script src="https://unpkg.com/ml5@latest/dist/ml5.min.js"></script>
     <script src="player.js"></script>
+    <script src="genome.js"></script>
     <script src="bullet.js"></script>
     <script src="npc.js"></script>
+    <script src="sketch.js"></script>
   </head>
   <body></body>
 </html>
